changes for shipment contract